--- a/Omar.html
+++ b/Omar.html
@@ -11,21 +11,21 @@
     <h2>About me:</h2>
     <p>
       My name is Omar Ahmed. I am a junior at Lehman college. I still dont know
-      what I want to speclize at yet, but I am conssidering being a fullstack
-      deveolper
+      what I want to specialize at yet, but I am considering being a fullstack
+      deveolper.
     </p>
-    <h2>Image:</h2>
+
     <img
       src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F47%2F2021%2F06%2F14%2Fsiberian-husky-puppy-grass-146571433-2000.jpg"
       alt="A puppy husky dog"
     />
     <h2>Experince:</h2>
-    <ol>
+    <ul>
       <li>Python</li>
       <li>Java</li>
       <li>C++</li>
       <li>Data structure and algorithms</li>
-    </ol>
+    </ul>
     <a href=""></a>
   </body>
 </html>
