--- a/koy.html
+++ b/koy.html
@@ -26,10 +26,10 @@
     <div class="mygroup">
         <p>My group members are:</p>
         <ul>
-            <li><a href="wong.html">Wong</a></li>
-            <li><a href="leah.html">Leah</a></li>
-            <li><a href="omar.html">Omar</a></li>
-            <li><a href="malalatiana.html">Malalatiana</a></li>
+            <li><a href="wong.html" target="_blank">Wong</a></li>
+            <li><a href="leah.html" target="_blank">Leah</a></li>
+            <li><a href="omar.html" target="_blank">Omar</a></li>
+            <li><a href="malalatiana.html" target="_blank">Malalatiana</a></li>
         </ul>
     </div>
 </body>
