Added files for leah

--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
 <body>
     <h1>Omar</h1>
     <a href=""></a>
+    <ul>
+        <li>
+            <a href="omar.html">Omar</a>
+            <a href="leah.html">Leah</a>
+        </li>
+    </ul>
 </body>
 </html>
