--- a/koy.html
+++ b/koy.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <link rel="stylesheet" href="koy_style.css"/>
+    <link rel="stylesheet" href="css\koy_style.css"/>
 </head>
 <body>
     <img src="images\koy.jpg" id="me" alt="koy">
