--- a/Omar.html
+++ b/Omar.html
@@ -4,28 +4,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My first website</title>
+    <title>About me</title>
     <link rel="stylesheet" href="css/omar_style.css" />
   </head>
   <body>
-    <h2>About me:</h2>
-    <p>
-      My name is Omar Ahmed. I am a junior at Lehman college. I still dont know
-      what I want to specialize at yet, but I am considering being a fullstack
-      deveolper.
-    </p>
-
     <img
       src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F47%2F2021%2F06%2F14%2Fsiberian-husky-puppy-grass-146571433-2000.jpg"
       alt="A puppy husky dog"
     />
-    <h2>Experince:</h2>
+    <h1>About me:</h1>
+    <p>
+      My name is Omar Ahmed I graduated form bronx community college spring
+      2022. Now I am a junior at Lehman college studying computer science. I
+      still dont know what I want to specialize at yet, but I am considering
+      being a fullstack deveolper.
+    </p>
+    <h1>Experience:</h1>
     <ul>
       <li>Python</li>
       <li>Java</li>
       <li>C++</li>
       <li>Data structure and algorithms</li>
+      <li>Big Data Analysis</li>
+      <li>MIPS Assembly</li>
     </ul>
-    <a href=""></a>
   </body>
 </html>
