--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="Style.css" />
+    <link rel="stylesheet" href="css/index_style.css" />
+    <title>Project 1</title>
   </head>
   <body>
-    <h1>Welcome to our website</h1>
-    <a href="Omar.html">Omar</a>
-    <a href=""></a>
+    <h1>Welcome to Group 2 Project1 !</h1>
+    <h2>Learn more about:</h2>
     <ul>
-        <li>
-            <a href="omar.html">Omar</a>
-            <a href="leah.html">Leah</a>
-        </li>
+      <li><a href="omar.html">Omar</a></li>
+      <li><a href="leah.html">Leah</a></li>
+      <li><a href="koy.html">Koy</a></li>
     </ul>
-</body>
+  </body>
 </html>
