--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1>Welcome to Group 2 Project1 !</h1>
     <h2>Learn more about:</h2>
     <ul>
+      <li><a href="malalatiana.html">Malalatiana</a></li>
       <li><a href="wong.html">Wong</a></li>
       <li><a href="omar.html">Omar</a></li>
       <li><a href="leah.html">Leah</a></li>
